# cpp_programming

./: .gitignore  Errata.md  README.md
Graph_Project/: HomChecker.cpp  IsomorphismChecker.cpp
Homework1/Task1/: Task1  proof  Пояснение.txt
Homework1/Task2/: Makefile  Task2  Task2.cpp  Task2.txt  Task2_UB  Task2_UB.cpp  no_methods.s  with_methods.s  Задачи.md  Запуск под linux.md  Пояснение.txt
Homework10/Task2/: Dictionary.cpp  Dictionary.txt
Homework11/: README.md  ThirdExample.hpp  test.cpp
Homework12/: gen_tests.sh
Homework12/src/: Makefile  gen_tests.cpp  generic_sort.h
Homework13/: Makefile  bench.sh
Homework2/: Makefile  Task1  Task1.cpp  Task1.hpp  Task1_n.hpp
Homework3/Task1/: CMakeLists.txt
Homework3/Task2/: CMakeLists.txt  README.md  Task2  Task2.c  Task2.cpp  Test_generator.cpp  Tests.cpp  generic_sort.h  generic_sort_c_style.h
Homework4/Task1/: ClassInheritance.h  Doxyfile
Homework5/: Makefile  README.md  Test.cpp  myVector  myVector.cpp  myVector.hpp
Homework6/: Ans  Program.cpp  Test1.txt  Test2.txt
Homework7/: Task1.cpp  Task1.md  Task3.cpp  Task4.cpp  Task5.cpp
Homework7_Errata/: Task3.cpp
Homework8/: Another_Example.cpp  Input.cpp  Makefile  Output.cpp  README.md  myVector.hpp
Homework9/: Logger.cpp  Logger.hpp  Makefile  log.txt  shell.cpp  shell.hpp
OldFiles/Homework9/: log.txt  shell.hpp
Semester3/: README.md
Semester3/Homework1/: Задачи.md
Semester3/Homework11/: README.md
Semester3/Homework12/: check.sh  clear.sh  run_test.sh
Semester3/Homework13/: gen_tests.cpp
Semester3/Homework2/: Задачи.md
Semester3/Homework3/: Задачи.md
Semester3/Homework4/: README.md
Semester3/Homework4/Task2/src/: CMakeLists.txt  Doxyfile  Heroes.cpp  MainClasses.cpp  Objects.cpp  WC3_Classes.cpp
Semester3/Homework5/: Makefile  myVector.cpp  myVector.hpp
Semester3/Homework6/: Program.cpp  Test.sh
Semester3/Homework7_Errata/: Task2.cpp  Task3.cpp  Task4.cpp
Semester3/Homework8/: README.md  myVector.hpp  test
Semester3/Homework9/: shell.hpp
Semester4/: .editorconfig  README.md
Semester4/Homework1/: Makefile  MutexWrapper.hpp  check.cpp
Semester4/Homework2/: DistributionMeasurer.hpp  Makefile  TaskDistributor.cpp  ThreadsafeQueue.hpp  readme.md
Semester4/Homework3/: CMakeLists.txt  Makefile  packaged_task.cpp  readme.md
Semester4/Homework4/: Bench.cpp  Bench2.cpp  BlockingStack.hpp  LockfreeStack.hpp  Makefile
Semester4/Homework5/: KNN.ipynb  README.md  SVM.ipynb
Semester4/OneAPI_experiments/: README.md
(+367 files in other folders)
